Chore: Simplify redundant clamps, dedupe loops, drop dead code
- AbstractGui/CashClashPlayer/RuneManager/IceFanHandler/ParticleUtils:
  replaced hand-rolled Math.min(Math.max(...)) clamp chains with
  Math.clamp.
- GameListener: extracted the duplicated cobweb-counting loop
  (click handler + pickup handler) into countCobwebsInInventory();
  null-guard the CashClashPlayer lookup before applyHealth() on
  respawn; dropped a stale comment about a one-shot sunscreen sound
  that's now handled by the item's Consumable component.
- EnchantsCategoryGui: simplified a single-statement lambda block and
  a redundant item != null check (RuneManager.isRune already handles it).
- MannequinManager: removed ~20 lines of commented-out villager-skin
  application code.
- ShopService: replaced a switch-with-one-case for the utility item cap
  with a ternary.
- BloomingRoseHandler: cache Bukkit.getOnlinePlayers() once per tick
  instead of calling it twice in a task that runs every 10 ticks.
- CarlsBattleaxeHandler: mark a BukkitRunnable field final.
- ParticleUtils: dropped a redundant world-null check (Player#getWorld
  is @NotNull) and simplified a >= to == where the loop can only ever
  hit that value once.
- GuiItemFactory: extracted the repeated ShopItemBuilder-from-EnchantEntry
  setup into runeBuilder(), and the applicable-materials lore string
  building into its own helper.